<resources>
    <string name="app_name">MixMate</string>
    <string name="title_home">Home</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_profile">Profile</string>
    <string name="title_view_inventory">View Inventory</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="search_hint">Type Anything</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="log_in_instead">Have An Account? Log In Instead</string>
    <string name="forgot_password">Forgot Your Password? Click Here</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="recipe_of_the_day">RECIPE OF THE DAY</string>
    <string name="generate_recommendation">GENERATE RECOMMENDATION</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Recipes of the day on your home screen!</string>
    <string name="channel_name">Channel_Name</string>
    <string name="channel_description">Channel_Description</string>
</resources>