<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recipes" />

    <!--note: will need to switch between sign up, log in and user detail -->
    <!-- automatic conditional navigation: https://developer.android.com/guide/navigation/use-graph/conditional -->
    <item
        android:id="@+id/navigation_sign_up"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/title_profile" />

</menu>