<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mixmate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.mixmate.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory">
        <action
            android:id="@+id/action_inventory_to_edit_inventory"
            app:destination="@id/navigation_edit_inventory"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.mixmate.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mixmate.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_edit_inventory"
        android:name="com.example.mixmate.ui.ingredientlist.EditInventoryFragment"
        android:label="Edit Inventory"
        tools:layout="@layout/fragment_edit_inventory">

        <action
            android:id="@+id/action_edit_inventory_to_inventory"
            app:destination="@id/navigation_inventory"/>
    </fragment>

</navigation>