<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appTitleText" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <EditText
                android:id="@+id/editTextTextConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxWidth="488dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toTopOf="@+id/toLogInText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextConfirmPassword" />

            <TextView
                android:id="@+id/toLogInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:text="@string/log_in_instead"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/appTitleText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>